# cloud-robotics

./: .gitignore  README.md  ros_master_setup.bash  server_amcl.launch  todo
client/: addClientTurtle.bash  startClientTurtle.bash
client/devel/: .catkin  .rosinstall  setup.sh
client/devel/lib/pkgconfig/: test_client.pc
client/devel/lib/test_client/: turtle
client/devel/share/test_client/cmake/: test_clientConfig.cmake
client/src/amcl_client/: CMakeLists.txt  package.xml
client/src/amcl_client/src/scripts/: amcl_client.py
client/src/test_client/: CMakeLists.txt  package.xml
client/src/test_client/msg/: input.msg
client/src/test_client/src/: .test_client.cpp.swp  input.cpp  test_client.cpp
cloud_robotics/: CMakeLists.txt  README.md  package.xml
cloud_robotics/launch/: client_amcl.launch  server_amcl.launch  turtlebot.launch
cloud_robotics/launch/actual_turtlebot/: README.md  amcl.launch.xml  launch_turtlbot.launch  start_amcl.launch
cloud_robotics/launch/cr_amcl/: client_turtlebot_amcl.launch  pr2_cr_amcl.launch.xml  pr2_cr_amcl_omni.launch.xml  server_turtlebot_amcl.launch
cloud_robotics/launch/cr_amcl/includes/: turtlebot_cr_amcl.launch.xml
cloud_robotics/launch/other/: amcl_node.xml  amclpr2.launch  test.launch
cloud_robotics/launch/pr2/: README.md  amclpr2.launch  cloud_pr2_amcl.launch.xml  move_base.launch  move_base.xml  other_world_pr2.launch  pr2_nav_tutorial.launch  real_pr2.launch
cloud_robotics/launch/sim_pr2/: README.md  amclpr2.launch  other_world_pr2.launch
cloud_robotics/launch/sim_turtlebot/: README.md  sim_turtlebot_nav.launch  turtlebot_gazebo.launch
cloud_robotics/launch/turtlebot/: README.md  amcl.launch.xml  client_amcl.launch  cloud_turtlebot.launch  server_amcl.launch  turtlebot.launch
cloud_robotics/maps/: cloud_test_map.pgm  cloud_test_map.yaml  map_2.pgm  map_2.yaml  osumap.pgm  osumap.yaml
cloud_robotics/rviz/: move_base.rviz  rviz_move_base.launch
cloud_robotics/scripts/: diagnose.py  master.py  mockDiagnostics.py
cloud_robotics/worlds/: cloud_robotics_demo.world  world_2.world
cr_amcl/: CMakeLists.txt  package.xml
cr_amcl/cfg/: AMCL.cfg
cr_amcl/src/: amcl_node.cpp
navigation/amcl/src/: amcl_node.cpp
navigation/src/navigation/amcl/: CMakeLists.txt
navigation/src/navigation/amcl/src/: amcl_node.cpp
server/: README.md  REAME.md  app.js  package.json  test_client.py
server/devel/: .catkin  .rosinstall  setup.sh
server/devel/include/server/: CurrentClients.h  NewClient.h  NumClients.h
server/devel/lib/pkgconfig/: server.pc
server/devel/lib/python2.7/dist-packages/server/msg/: _CurrentClients.py  _NewClient.py  _NumClients.py  __init__.py
server/devel/share/common-lisp/ros/server/msg/: CurrentClients.lisp  NewClient.lisp  NumClients.lisp  _package.lisp  _package_CurrentClients.lisp  server-msg.asd  (+2 more)
server/devel/share/server/cmake/: server-msg-extras.cmake  server-msg-paths.cmake  serverConfig.cmake
server/src/server/: CMakeLists.txt  package.xml
server/src/server/msg/: ComputationLocation.msg  CurrentClients.msg  NewClient.msg
server/src/server/src/scripts/: diagnose.py  handleAMCL.py  interruptBot.py  master.py  mockDiagnostics.py  testClient.py
