<?xml version="1.0"?>
<package>
  <name>cloud_robotics</name>
  <version>1.0.0</version>
  <description>
    <p>
      The cloud_robotics package is an attempt to reduce a robot's battery consumption
      by moving localization computations to a remote server. It works by running AMCL
      on both the robot and a server, and redirecting laser scans to one of these 
      AMCL instances based on network and processor quality.
    </p>
  </description>

  <author>Jonathan Merrill</author>                                           
  <author>Evan Schallerer</author>                                            
  <author>James Coan</author>                                                 
  <maintainer email="merrijon@oregonstate.edu">Jonathan Merrill</maintainer>> 
  <maintainer email="schallee@oregonstate.edu">Evan Schallerer</maintainer>>  
  <maintainer email="coanj@oregonstate.edu">James Coan</maintainer>>          

  <license>LGPL</license>
  
<!-- <url type="website">http://wiki.ros.org/cloud_robotics</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>

</package>
