<package>
    <name>cr_amcl</name>
    <version>1.0.0</version>
    <description>
        <p>
            amcl is a probabilistic localization system for a robot moving in
            2D. It implements the adaptive (or KLD-sampling) Monte Carlo
            localization approach (as described by Dieter Fox), which uses a
            particle filter to track the pose of a robot against a known map.
        </p>
        <p>
            This node is derived, with thanks, from Andrew Howard's excellent
            'amcl' Player driver.
        </p>
        <p>
            This version of amcl has been modified by Jonathan Merrill, Evan Schallerer,
            and James Coan for their 2016 Senior Capstone project at Oregon State
            University. Project sponsored by Dr. Bill Smart.
        </p>
    </description>
    <url>http://wiki.ros.org/cr_amcl</url>
    <!-- See http://wiki.ros.org/amcl for original amcl developers and updated package -->
    <author>Jonathan Merrill</author>
    <author>Evan Schallerer</author>
    <author>James Coan</author>
    <maintainer email="merrijon@oregonstate.edu">Jonathan Merrill</maintainer>>
    <maintainer email="schallee@oregonstate.edu">Evan Schallerer</maintainer>>
    <maintainer email="coanj@oregonstate.edu">James Coan</maintainer>>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>

    <test_depend>map_server</test_depend>
    <test_depend>rosbag</test_depend>
</package>
